k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mojeeb
  labels:
    app: mojeeb
    environment: production
